--- a/fraxy/readme
+++ b/fraxy/readme
@@ -19,6 +19,67 @@
 觸手可以無限在生
 彈舌不能破壞
 
+。Four
+很單純的所有武器都４隻的設計。
+中心部會發射４條巨型光龍(Homing Laser)攻擊。
+另外還有擋子彈和防格鬥戰用的４片小盾牌(可破壞)。
+
+。ATAT
+fu-sha(內建有４隻大盾牌的那個)的重製強化型。
+除了原有的武裝外還新增了小型雷射、核心的格鬥用光劍和連射雷射光速。
+外圍建有力場盾牌、核心裝備了物理防禦盾和回復裝置。
+整體概念是利用盾牌製造出"不得不格鬥戰"的同時，又利用盾牌和雷射製造出進者必死的地帶。
+
+。New EE(11)
+從閃亮銀槍某Boss改來的劣化版。
+裝備有大型雷射炮、防禦用反彈雷射和小機槍。
+外牆是無敵的，所以玩家必須從雷射炮發射口"進入"攻擊核心。
+核心裝備有防禦用外牆(可破壞)，還可使用雷射爆發攻擊。
+本來還想加裝追蹤彈，但考慮到現時武裝已經很無敵，所以放棄。
+另外一提，小機槍是可以破壞的。
+
+
+。The gif
+能量蛋(Energy egg)機能測試的副產品。
+裝備了多種可以"爆射"各式子彈的"能量蛋發射器"。
+自機本身就只裝了少量裝甲自衛．．．算是吧XD
+另外提供能量彈修改的相關數字:
+Energy egg
+1 : ？
+2 : 投擲距離
+3 : ？
+4 : ？
+5 : -2=扇形　-1=直線　0=圓形　　
+6 : 變成其他子彈　1>一般彈 2>Bullet 4>能量球 6 >HL 8>圓圈 12>雷射條 14>爆炸 16>留彈 17>機槍彈 18>音波 21>飛彈 23>雷射條(快) 24>圓圈(空心) 
+7 : ？
+8 : 自爆時間
+
+
+。OCP
+C-power的模仿版。
+和原版不同，以快速反射光圈攻擊；並加裝了多種干擾性武裝。
+核心被裝甲包裹，只能從唯一的通道攻擊。
+
+
+。Tower Type T (根本是亂寫的)
+為了增加難度特意做成一般2D STG的模式。
+自機的方向會隨著畫面移動而改變。
+武裝方面有超高輸出雷射炮、迴轉機槍塔、特殊能量蛋和飛彈發射器。
+雷射炮的輸出限制器被破壞後輸出率會增強；不過防禦壁還是打不破XD
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
