--- a/age2de/readme
+++ b/age2de/readme
@@ -1,1 +1,8 @@
 https://bck6d03.github.io/file-share/age2de/DE%20up15.html
+
+。AocScenarioTranslator
+來自翔鷹管家的漢化版AocScenarioTranslator
+源文件: https://github.com/sdjnyty/AocScenarioTranslator
+
+
+
