--- a/age2de/readme
+++ b/age2de/readme
@@ -1,11 +1,13 @@
 
-。DE up1.5
+。DE up15.html
 https://bck6d03.github.io/file-share/age2de/DE%20up15.html
-
+sk代碼轉換工具，用來方便理解自己寫了什麼代碼。
+因為DE版本更新的關係，現時有部份代碼轉換會出錯。
+建議參考：https://ugc.aoe2.rocks/general/xs/
 
 。AocScenarioTranslator
 來自翔鷹管家的漢化版AocScenarioTranslator
-源文件: https://github.com/sdjnyty/AocScenarioTranslator
+源文件：https://github.com/sdjnyty/AocScenarioTranslator
 
 
 
