--- a/fraxy/readme
+++ b/fraxy/readme
@@ -68,9 +68,10 @@ C-power的模仿版。
 雷射炮的輸出限制器被破壞後輸出率會增強；不過防禦壁還是打不破XD
 
 
-
-
-
+。THE BLADE TEST
+測試劍鬥模塊。
+會在玩家身上生成一把光劍，玩家能用它彈開敵人的雷射，並使用劍身攻擊敵人。
+測試機會用子機進行簡單的攻擊。
 
 
 
