--- a/Script Example/Skript/readme
+++ b/Script Example/Skript/readme
@@ -14,6 +14,10 @@ RideIronGolem.sk
 主手控制桿，副手紅石方塊時，右鍵將兩者合成「鐵魔像控制器」。
 部份功能未完成，比如跳躍功能
 
+ShulkerBox.sk
+右鍵打開界伏盒的功能。
+為防止各種ＢＵＧ操作，所以會在打開界伏盒界面時禁止移動界伏盒。
+
 
 
 功能性的Function：
