--- a/Script Example/Skript/readme
+++ b/Script Example/Skript/readme
@@ -18,6 +18,11 @@ ShulkerBox.sk
 右鍵打開界伏盒的功能。
 為防止各種ＢＵＧ操作，所以會在打開界伏盒界面時禁止移動界伏盒。
 
+Bounty_Core.sk
+空手對村民Shift+右鍵：打開賞金表清單，可從中得到隨機的賞金紙。賞金表每 1小時 更新
+手持賞金紙對空氣右鍵：更新賞金紙的資料
+手持賞金紙對村民Shift+右鍵：提交任務
+
 
 
 功能性的Function：
