--- a/Script Example/Skript/readme
+++ b/Script Example/Skript/readme
@@ -23,6 +23,11 @@ Bounty_Core.sk
 手持賞金紙對空氣右鍵：更新賞金紙的資料
 手持賞金紙對村民Shift+右鍵：提交任務
 
+ProjectileEffect.sk
+各種投射物相關效果的試驗品。現有效果如下：
+＞反射弓：射出的箭無視重力，撞牆會反彈五次，射中生物時停止反彈
+
+
 
 
 功能性的Function：
