--- a/Script Example/Skript/readme
+++ b/Script Example/Skript/readme
@@ -25,8 +25,9 @@ Bounty_Core.sk
 
 ProjectileEffect.sk
 各種投射物相關效果的試驗品。現有效果如下：
-＞反射弓：射出的箭無視重力，撞牆會反彈五次，射中生物時停止反彈
-
+＞無重力：投射物無視重力
+＞反射：技射物撞牆會反彈五次，射中生物時停止反彈
+＞追蹤：投射物會自動追蹤12格內的生物（預設為喪屍和狼）
 
 
 
