--- a/Script Example/Skript/readme
+++ b/Script Example/Skript/readme
@@ -29,6 +29,13 @@ ProjectileEffect.sk
 ＞反射：技射物撞牆會反彈五次，射中生物時停止反彈
 ＞追蹤：投射物會自動追蹤12格內的生物（預設為喪屍和狼）
 
+Mobs_TameMobs.sk
+自定義馴服生物
+＞通過使用指定道具可以把生物馴服
+＞可馴服的生物種類可以在 TM_CanTame 自行修改
+＞空手右鍵馴服生物：切換Follow功能
+＞shift+空手右鍵馴服生物：打開裝備＋功能選單
+
 
 
 功能性的Function：
