--- a/rm2k/readme
+++ b/rm2k/readme
@@ -1,1 +1,11 @@
+This folder is used to keep RM2K games that is deleted from the internet.
+
+
+
+町高SIREN
+Create by ニック(Nick)
+Come from「都立町田高校パソコン同好会非公式サイト」
+The original file has been deleted, so this file is backup uploaded.
+http://mazda1micro1vaka.yakiuchi.com/game/index.html
+
 
